#[build-system]
#requires = ["setuptools>=61.0"]
#build-backend = "setuptools.build_meta"

[project]
name = "mysql-wrapper"
version = "0.1.0"
license = "MIT"
description = "A lightweight wrapper around the Python MySQL connector"
authors = [
    { name = "Justin Neil", email = "justin.neil2@gmail.com" }
]
readme = "README.md"
dependencies = [
    "mysql-connector-python>=8.0",
    "jsonpath-ng",
    "jproperties"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black"
]

[tool.uv]
# custom config

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]